Resolve menu spacing layout in desktop view

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,7 +13,7 @@ body {
 
 * {
   box-sizing: border-box;
-  border: 1px solid #ff9776;
+  /* border: 1px solid #ff9776; */
 }
 
 h1 {
@@ -83,7 +83,7 @@ html.dark {
 
 @media screen and (min-width: 636px) {
   .nav-links {
-    flex: 10;
+    flex: 14;
     display: block;
     position: static;
     width: auto;
